BUGFIX: IDAPython: upon failure, `ida_hexrays.decompile()` now always returns `None` (instead of either throw a `ida_hexrays.DecompilationFailure` or return `None`.)
The type `ida_hexrays.DecompilationFailure` is still present (but is a dummy) because otherwise scripts might break. It is never thrown anymore.

Note that `vds_xrefs.py` still need the `str(cfunc))` kludge, because of a caveat in when/how the decompiler actually updates the global xrefs cache. This will be fixed in the next IDA minor release

In addition, this commit introduces the notion of a typemap to convert form an `ea_t` to a `func_t *` for the `decompile()` call, but doesn't generalize its use.
Since this is a relatively far-ranging change, this will only be introduced in the next IDA minor release as well.

--- a/tools/deploy/header.i.in
+++ b/tools/deploy/header.i.in
@@ -2039,5 +2039,25 @@ TRY_RAW_LONG:
 %}
 %enddef
 
+%fragment("cvt_func_t", "header")
+{
+  bool cvt_func_t(func_t **out, PyObject *obj)
+  {
+    uint64 u64;
+    if ( PyW_GetNumber(obj, &u64) )
+    {
+      *out = get_func(ea_t(u64));
+    }
+    else
+    {
+      void *p = 0;
+      if ( !SWIG_IsOK(SWIG_ConvertPtr(obj, &p, SWIGTYPE_p_func_t, 0 | 0 )) )
+        return false;
+      *out = reinterpret_cast<func_t*>(p);
+    }
+    return true;
+  }
+}
+
 #endif // __HEADER_I__
 // END: auto-inserted header
