--- a/tools/deploy/header.i.in
+++ b/tools/deploy/header.i.in
@@ -39,6 +39,7 @@ extern plugin_t PLUGIN;
 %feature("nodirector") generic_linput_t;
 %feature("nodirector") place_t;
 %feature("nodirector") idaplace_t;
+%feature("nodirector") tiplace_t;
 %feature("nodirector") qrefcnt_obj_t;
 %feature("nodirector") qstring_printer_t;
 %feature("nodirector") simpleline_place_t;
@@ -438,61 +439,44 @@ static PyObject *type##_get_clink_ptr(PyObject *self)
 %enddef
 
 //---------------------------------------------------------------------
-// Convert an incoming Python list to a tid_t[] array
-%typemap(in) tid_t[ANY](tid_t temp[$1_dim0]) {
-    int i, len;
+%typemap(in) tid_t[ANY] (qvector<tid_t> temp)
+{
+  // %typemap(in) tid_t[ANY] (qvector<tid_t> temp)
+  Py_ssize_t len = PyW_PySeqToTidVec(&temp, $input, $1_dim0);
+  if ( len == CIP_FAILED )
+    return nullptr;
 
-    if (!PySequence_Check($input))
-    {
-        PyErr_SetString(PyExc_TypeError,"Expecting a sequence");
-        return nullptr;
-    }
-
-    /* Cap the number of elements to copy */
-    len = PySequence_Length($input) < $1_dim0 ? PySequence_Length($input) : $1_dim0;
-
-    for (i =0; i < len; i++)
-    {
-        newref_t item(PySequence_GetItem($input,i));
-        if (!PyLong_Check(item.o))
-        {
-            PyErr_SetString(PyExc_ValueError,"Expecting a sequence of long integers");
-            return nullptr;
-        }
-
-        temp[i] = PyLong_AsUnsignedLong(item.o);
-    }
-    $1 = &temp[0];
+  temp.resize($1_dim0, 0); // make sure we have enough memory allocated
+  $1 = temp.begin();
 }
 
 //-------------------------------------------------------------------------
-// Same, but with non-fixed sized arrays.
-%typemap(in) (const tid_t *path, int plen) (qvector<tid_t> temp) {
-    if (!PySequence_Check($input))
-    {
-        PyErr_SetString(PyExc_TypeError,"Expecting a sequence");
-        return nullptr;
-    }
-    int plen = PySequence_Length($input);
-    if ( plen <= 0 )
-    {
-        PyErr_SetString(PyExc_TypeError, "Sequence must have at least 1 item");
-        return nullptr;
-    }
-    temp.resize(plen);
-    for ( int i =0; i < plen; ++i )
-    {
-        newref_t item(PySequence_GetItem($input,i));
-        if (!PyLong_Check(item.o))
-        {
-            PyErr_SetString(PyExc_ValueError,"Expecting a sequence of long integers");
-            return nullptr;
-        }
+%typemap(in) (const tid_t *path, int plen) (qvector<tid_t> temp)
+{
+  // %typemap(in) (const tid_t *path, int plen/path_len) (qvector<tid_t> temp),
+  Py_ssize_t len = PyW_PySeqToTidVec(&temp, $input);
+  if ( len == CIP_FAILED )
+    return nullptr;
 
-        temp[i] = PyLong_AsUnsignedLong(item.o);
-    }
-    $1 = temp.begin();
-    $2 = int(temp.size());
+  $1 = temp.begin();
+  $2 = int(temp.size());
+}
+
+//-------------------------------------------------------------------------
+%typemap(typecheck, precedence=SWIG_TYPECHECK_STRING_ARRAY) const qvector<tid_t> &path
+{
+  // %typemap(typecheck, precedence=SWIG_TYPECHECK_STRING_ARRAY) const qvector<tid_t> &path
+  $1 = PyW_IsSequenceType($input);
+}
+
+%typemap(in) (const qvector<tid_t> &path) (qvector<tid_t> temp)
+{
+  // %typemap(in) (const qvector<tid_t> &path)
+  Py_ssize_t len = PyW_PySeqToTidVec(&temp, $input);
+  if ( len == CIP_FAILED )
+    return nullptr;
+
+  $1 = &temp;
 }
 
 %{
@@ -1031,7 +1015,7 @@ SWIGINTERN PyObject *_maybe_byte_array_or_none_result(
 //-------------------------------------------------------------------------
 %fragment("cvt_const_insn_t_ref", "header")
 {
-  bool convert_const_insn_t_ref(insn_t *out, PyObject *in)
+  bool convert_const_insn_t_ref(insn_t *out, PyObject *in, swig_type_info *ty)
   {
     uint64 ea;
     bool ok = PyW_GetNumber(in, &ea);
@@ -1039,14 +1023,14 @@ SWIGINTERN PyObject *_maybe_byte_array_or_none_result(
     {
       insn_t tmp;
       ok = decode_insn(&tmp, ea_t(ea)) > 0;
-      if ( ok )
+      if ( ok && out != nullptr )
         *out = tmp;
     }
     else
     {
       insn_t *p_insn = nullptr;
-      ok = SWIG_ConvertPtr(in, (void **) &p_insn, SWIGTYPE_p_insn_t, 0) >= 0 && p_insn != nullptr;
-      if ( ok )
+      ok = SWIG_ConvertPtr(in, (void **) &p_insn, ty, 0) >= 0 && p_insn != nullptr;
+      if ( ok && out != nullptr )
         *out = *p_insn;
     }
     return ok;
@@ -1057,9 +1041,13 @@ SWIGINTERN PyObject *_maybe_byte_array_or_none_result(
 %typemap(in, fragment="cvt_const_insn_t_ref") (const insn_t &) (insn_t lins)
 {
   // %typemap(in) (const insn_t &)
-  if ( !convert_const_insn_t_ref(&lins, $input) )
+  if ( !convert_const_insn_t_ref(&lins, $input, $1_descriptor) )
     SWIG_exception_fail(SWIG_ValueError, "Expected either an address, or a non-null ida_ua.insn_t instance");
   $1 = &lins;
+}
+%typemap(typecheck, precedence=SWIG_TYPECHECK_POINTER, fragment="cvt_const_insn_t_ref") const insn_t &
+{ // %typemap(typecheck, precedence=SWIG_TYPECHECK_POINTER) const insn_t &
+  $1 = convert_const_insn_t_ref(nullptr, $input, $1_descriptor);
 }
 %typemap(doc) (const insn_t &) "$1_name: an ida_ua.insn_t, or an address (C++: const insn_t &)"
 
@@ -1132,6 +1120,7 @@ typedef int ui_notification_t;
 %apply long long { qoff64_t };
 
 %apply qstring *result { qstring *out };
+%apply qstring *result { qstring *out_name };
 %apply qstring *result { qstring *buf };
 %apply qstring *result { qstring *errbuf };
 %apply int *OUTPUT { int *icon };
@@ -1262,15 +1251,13 @@ struct dynamic_wrapped_array_t {
 
 //-------------------------------------------------------------------------
 #if SWIG_VERSION == 0x40000 || SWIG_VERSION == 0x40001
-%typemap(out) tinfo_t {}
-%typemap(ret) tinfo_t
+%typemap(out) tinfo_t
 {
-  // %typemap(ret) tinfo_t
+  // %typemap(out) tinfo_t
   tinfo_t *ni = new tinfo_t($1);
   til_register_python_tinfo_t_instance(ni);
   $result = SWIG_NewPointerObj(ni, $&1_descriptor, SWIG_POINTER_OWN | 0);
 }
-
 %typemap(check) tinfo_t *
 {
   // %typemap(check) tinfo_t *
@@ -1290,6 +1277,25 @@ struct dynamic_wrapped_array_t {
   // %typemap(newfree) tinfo_t *
   delete $1;
 }
+
+// Specialization for member `tinfo_t`'s, which we want to return as-is
+%typemap(out) tinfo_t *type,
+  tinfo_t *tif,
+  tinfo_t *obj_type,
+  tinfo_t *closure,
+  tinfo_t *parent,
+  tinfo_t *elem_type,
+  tinfo_t *rettype,
+  tinfo_t *return_type,
+  tinfo_t *idb_type,
+  tinfo_t *formal_type,
+  tinfo_t *functype,
+  tinfo_t *idb_type
+{
+  // %typemap(out) tinfo_t *type (specialization for member tinfo_t)
+  $result = SWIG_NewPointerObj($1, $1_descriptor, 0);
+}
+
 #else
 #error Ensure tinfo_t wrapping is compatible with this version of SWIG
 #endif
@@ -1581,9 +1587,9 @@ SWIGINTERN PyObject *qstrvec2pylist(const qstrvec_t &vec, int flags=0)
 %numbers_list_to_values_vec_helper(VECTYPE, SWIGTYPE, PYLIST_CONVERTOR, &);
 %enddef
 #ifdef __EA64__
-%numbers_list_to_values_vec(eavec_t, SWIGTYPE_p_qvectorT_unsigned_long_long_t, PyW_PyListToEaVec);
+%numbers_list_to_values_vec(eavec_t, SWIGTYPE_p_qvectorT_unsigned_long_long_t, PyW_PySeqToEaVec);
 #else
-%numbers_list_to_values_vec(eavec_t, SWIGTYPE_p_qvectorT_unsigned_int_t, PyW_PyListToEaVec);
+%numbers_list_to_values_vec(eavec_t, SWIGTYPE_p_qvectorT_unsigned_int_t, PyW_PySeqToEaVec);
 #endif
 
 //-------------------------------------------------------------------------
@@ -1797,6 +1803,30 @@ ${NONNULL_TYPEMAPS}
             "in method '" "$symname" "', argument " "$argnum"" of type 'callable'");
   $1 = call_py_testf_t;
   $2 = $input;
+}
+
+%typemap(in) (printer_t *printer)
+{
+  // %typemap(in) (printer_t *printer)
+  if ( $input == Py_None )
+  {
+    $1 = nullptr;
+  }
+  else if ( PyBool_Check($input) )
+  {
+    $1 = $input == Py_True ? msg : nullptr;
+  }
+  else
+  {
+    int res = SWIG_ConvertFunctionPtr($input, (void**)(&$1), SWIGTYPE_p_f_p_q_const__char_v_______int);
+    if ( !SWIG_IsOK(res) )
+    {
+      SWIG_exception_fail(SWIG_ArgError(res), "in method '" "parse_decls" "', argument " "3"" of type '" "printer_t *""'"); 
+      SWIG_exception_fail(
+            SWIG_TypeError,
+            "in method '" "$symname" "', argument " "$argnum"" of type 'printer_t *'");
+    }
+  }
 }
 
 %define %define_regval_python_accessors()
